Fix up arrow on smaller screens.

--- a/faq-accordion-card-main/styles.sass
+++ b/faq-accordion-card-main/styles.sass
@@ -13,19 +13,30 @@
     font-family: 'Kumbh Sans', sans-serif
     color: var(--very-dark-blue)
 
+html
+    height: 100%
 
 body
+    background: linear-gradient(var(--soft-violet), var(--soft-blue))
+    height: 100%
+    background-attachment: fixed
+    padding: 5em 0 5em 0
+    
+
+.container
     display: flex
     justify-content: center
     align-items: center
-    background: linear-gradient(var(--soft-violet), var(--soft-blue))
-    background-repeat: no-repeat
-    height: 100vh
 
 .card
     margin: calc(1em + 106px) 1em 1em 1em
     border-radius: 1em
     background-color: white
+
+    display: flex
+    justify-content: center
+    flex-direction: column
+    width: 100% 
 
     &__image_container
         margin-top: -106px
@@ -35,7 +46,7 @@ body
         margin-right: 26px
 
     &__image_shadow
-        margin-top: -106px
+        margin-top: -90px
 
     &__heading
         margin: 1em
@@ -44,7 +55,7 @@ body
 
     &__accordion
         margin: 1em 0 4em 0
-        font-size: 1.2em
+        font-size: 1.1em
 
         details
             color: var(--dark-gray-blue)
@@ -56,24 +67,22 @@ body
                 outline: none
                 margin: 1em 0 1em 0
                 color: var(--dark-blue)
-                position: relative
                 cursor: pointer
+
+                .arrow 
+                    background-image: url("../images/icon-arrow-down.svg")
+                    background-repeat: no-repeat
+                    width: 10px
+                    height: 7px
+                    float: right
+                    transition: all 0.4s ease
 
             summary::-webkit-details-marker 
                 display: none
-
-            &[open] summary ~ *
-                animation: open 0.5s ease
-
-            summary:after
-                content: url("../images/icon-arrow-down.svg")
-                position: absolute
-                right: 0
-                transition: 200ms linear
 
             &[open]
                 summary
                     font-weight: bold
 
-                summary:after
-                    transform: rotate(-180deg)
+                    .arrow
+                        transform: rotate(-180deg)
